0029911: Porting to Debian80-64 : Regressions in Foundation Classes

Test for handles is updated according to behavior expected from modern compilers.

Performance test perf ncollection A1 is updated (valid range extended) according to measurements made on Debian 8 with GCC 4.9 and on Ubuntu 16.04 with CLang 3.8 and 6.0 and GCC 4.7, 4.9, and 5.0.